--- a/index1.html
+++ b/index1.html
@@ -139,7 +139,7 @@
      <ol> <p>Provide here your information</p>
       <hr>
 <form
-  action="https://formspree.io/f/mzbnelnk
+  action="https://formspree.io/f/mzbnelnk"
   method="POST"
 >
   <label>
