--- a/index1.html
+++ b/index1.html
@@ -129,10 +129,7 @@
       <br>
         <div class="video"> 
             <span>video</span>
-<video width="240" height="100" controls>
-  <source src="cookies.mp4" type="video/mp4">
-</video>
-</video>
+<a class="w-[120px] h-[80px] block mx-3" href="https://detailed-video-29b30.web.app/detailed%20video.mp4"><img src="download.png" alt=""></a>
         </div>
       <br>
       <br>
