--- a/index1.html
+++ b/index1.html
@@ -129,8 +129,9 @@
       <br>
         <div class="video"> 
             <span>video</span>
-<a class="w-[120px] h-[80px] block mx-3" href="https://detailed-video-29b30.web.app/detailed%20video.mp4"><img src="download.png" alt=""></a>
-        </div>
+><div>
+      <a class="w-32 h-20 block" href="https://detailed-video-29b30.web.app/detailed%20video.mp4"><img class="w-32 h-20 mx-3" src="download.png" alt=""></a>
+    </div><p class="text-[10px] font-serif  mt-3 mx-3">
       <br>
       <br>
      <ol> <p>Provide here your information</p>
