--- a/index1.html
+++ b/index1.html
@@ -129,9 +129,7 @@
       <br>
         <div class="video"> 
             <span>video</span>
-><div>
-      <a class="w-32 h-20 block" href="https://detailed-video-29b30.web.app/detailed%20video.mp4"><img class="w-32 h-20 mx-3" src="download.png" alt=""></a>
-    </div><p class="text-[10px] font-serif  mt-3 mx-3">
+  <a href="vidio.html"><video width="200px" src="/cookies.mp4.mp4" controls></video></a>
       <br>
       <br>
      <ol> <p>Provide here your information</p>
