--- a/index1.html
+++ b/index1.html
@@ -127,9 +127,13 @@
       <p2>Watch video before you provide information </p2>
       <br>
       <br>
-        <div class="video"> 
+               <div class="video"> 
             <span>video</span>
-  <a href="vidio.html"><video width="200px" src="/cookies.mp4.mp4" controls></video></a>
+<video width="240" height="100" controls>
+  <source src="cookies.mp4" type="video/mp4">
+</video>
+</video>
+        </div>
       <br>
       <br>
      <ol> <p>Provide here your information</p>
